syntax = "proto3";

option csharp_namespace = "GrpcTicket";

package TicketAPI;

import "google/protobuf/timestamp.proto";

message TicketCreateRequest {
    int32 customer_id = 1;
}

message TicketGetRequest {}

message TicketGetByIdRequest {
    int32 id = 1;
}

message TicketResponse {
    int32 id = 1;
    string code = 2;
    string message = 3;
    int32 customer_id = 4;
    google.protobuf.Timestamp created_at = 5;
}

message TicketListResponse {
    repeated TicketResponse tickets = 1;
}

message CustomerTicketsGetRequest {
    int32 customer_id = 1;
}

service Ticket {
    rpc GetAllTickets (TicketGetRequest) returns (TicketListResponse) {}
    rpc GetTicketById (TicketGetByIdRequest) returns (TicketResponse) {}
    rpc CreateTicket (TicketCreateRequest) returns (TicketResponse) {}
    rpc GetCustomerTickets (CustomerTicketsGetRequest) returns (TicketListResponse) {}
}